--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,10 @@
         {% endblock %}
     </title>
     <link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css">
+    <script src="/assets/js/popper.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/htmx.min.js"></script>
+    <script src="/assets/js/scripts.js" defer></script>
 </head>
 <body>
 {% block body %}
