--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -1,5 +1,11 @@
-<aside class="col-2 vh-100 bg-dark-subtle">
-    <div class="">
+<aside class="vh-100 d-none d-lg-block col-lg-3 col-xl-2 bg-primary">
+    {% include "partials/sidebar-content.html.twig" %}
+</aside>
 
+<aside class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
+    {% include "partials/sidebar-content.html.twig" %}
 </aside>
