--- a/templates/partials/head.html.twig
+++ b/templates/partials/head.html.twig
@@ -7,7 +7,7 @@
         Car Service Management
     {% endblock %}
 </title>
-<link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 <script src="/assets/js/popper.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script src="/assets/js/htmx.min.js"></script>
