--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -3,7 +3,7 @@
 {#{% include "partials/nav.html.twig" %}#}
 
 {#<div>#}
-{#    Register#}
+{#    RegisterController#}
 {#</div>#}
 
 {#{% include "partials/footer.html.twig" %}#}
