--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,3 +1,14 @@
-<div>
+{% extends "base.html.twig" %}
+
+{% block title %}
     Login
-</div>
+{% endblock title %}
+
+{% block sidebar %}
+{% endblock sidebar %}
+
+{% block main %}
+    <div class="col-lg-9 col-xl-10">
+        <h1>Login</h1>
+    </div>
+{% endblock main %}
