--- a/templates/partials/head.html.twig
+++ b/templates/partials/head.html.twig
@@ -8,6 +8,7 @@
     {% endblock %}
 </title>
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/css/custom.css">
 <script src="/assets/js/popper.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script src="/assets/js/htmx.min.js"></script>
