--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -2,7 +2,10 @@
     class="navbar navbar-expand-lg px-lg-5 bg-light text-white"
 >
     <div class="container-fluid">
-        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+        <button class="navbar-toggler d-lg-none"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasSidebar"
                 aria-controls="offcanvasExample"
         >
             <span class="navbar-toggler-icon"></span>
