--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -1,7 +1,9 @@
 <nav
-    class="navbar navbar-expand-lg px-lg-5 bg-light text-white"
+    class="navbar navbar-expand-lg px-lg-5 bg-dark-subtle text-white"
 >
     <div class="container-fluid">
+{#        TODO: Hide this button when user is not logged in#}
+
         <button class="navbar-toggler d-lg-none"
                 type="button"
                 data-bs-toggle="offcanvas"
