--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
             hx-swap="outerHTML"
             hx-target="this"
         >
-            <div class="input-group">
+            <div class="input-group shadow-sm rounded-3">
                 <input
                     type="text"
                     name="customerCode"
