--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="vh-100 col-lg-3 col-xl-2 bg-secondary-subtle">
+<aside id="sidebar" class="vh-100 col-lg-3 col-xl-2 border-1 border-end border-dark-subtle" >
     {% include "partials/sidebar-content.html.twig" %}
 </aside>
 
