--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -8,7 +8,31 @@
 {% endblock sidebar %}
 
 {% block main %}
-    <div class="col-lg-9 col-xl-10">
-        <h1>Login</h1>
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+        <div class="car d-flex flex-column gap-3 p-5 border border-1 rounded shadow-sm">
+            <h1 class="text-center mb-5">Logowanie</h1>
+            <div class="form-floating">
+                <input id="username"
+                       type="text"
+                       name="username"
+                       placeholder=" "
+                       class="form-control form-control-lg"
+                >
+                <label for="username">Nazwa użytkownika</label>
+            </div>
+            <div class="form-floating">
+                <input id="password"
+                       type="password"
+                       name="password"
+                       placeholder=" "
+                       class="form-control form-control-lg"
+                >
+                <label for="password">Hasło</label>
+            </div>
+            <button class="btn btn-lg btn-secondary">
+                Zaloguj się
+            </button>
+            <a href="" class="link mx-auto">Zapomniałeś hasła?</a>
+        </div>
     </div>
 {% endblock main %}
