--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -8,7 +8,7 @@
 {#{% endblock sidebar %}#}
 
 {% block main %}
-    <div id="main" class="col-lg-9 col-xl-10">
+    <div id="main" class="col col-lg-9 col-xl-10">
         <h1>Register</h1>
     </div>
 {% endblock main %}
