resolving some problems

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,13 @@
     </div>
 </section>
 
+<div id="loader-backdrop" class="loader">
+    <div id="spinner" class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+    <div class="spinner-backdrop">
+    </div>
+</div>
 {% include "partials/footer.html.twig" %}
 
 </body>
