--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -34,3 +34,32 @@
         width: 80%;
     }
 }
+
+.loader {
+    display: none;
+    transition: opacity 300ms ease-in;
+}
+
+.htmx-request .loader {
+    display: block;
+}
+
+.htmx-request.loader {
+    display: block;
+}
+
+.spinner-backdrop {
+    position: absolute;
+    inset: 0 0;
+    height: 100vh;
+    width: 100%;
+    background-color: grey;
+    opacity: 40%;
+}
+
+#spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+}
