--- a/templates/client/service-details.html.twig
+++ b/templates/client/service-details.html.twig
@@ -3,19 +3,18 @@
         <div class="accordion-item">
             <h3 class="accordion-header">
                 <button
-                    class="accordion-button"
+                    class="accordion-button collapsed"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#{{ car.model }}"
                     aria-expanded="true"
-                    aria-controls="collapseOne"
+                    aria-controls="{{ car.model }}"
                 >
                     Accordion Item #1
                 </button>
             </h3>
             <div id="{{ car.model }}"
-                 class="accordion-collapse collapse show"
-                 data-bs-parent="#carsAccordion"
+                 class="accordion-collapse collapse"
             >
                 <div class="accordion-body">
                     {{ car.model }}
