--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,6 +13,8 @@
             hx-post="/service-details"
             hx-swap="outerHTML"
             hx-target="this"
+            hx-indicator="#loader-backdrop"
+            class="replace-content"
         >
             <div class="input-group shadow-sm rounded-3">
                 <input
@@ -27,6 +29,7 @@
                 </button>
             </div>
         </form>
+
     </div>
 {% endblock main %}
 
