add some bootstrap 5.3 styles

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,17 @@
 {# TODO: Redo layouts #}
 <!doctype html>
-<html lang="en">
+<html lang="en" >
 <head>
     <title>
+        CSM
         {% block title %}
-            Car Service Management
         {% endblock %}
     </title>
     {% include "partials/head.html.twig" %}
     {% block head %}
     {% endblock head %}
 </head>
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden" id="main-container">
 
 {% include "partials/nav.html.twig" %}
 
