--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -44,10 +44,15 @@
                     </li>
                 </ul>
                 {% else %}
-                    <a class="btn"
+                    <a class="btn text-body"
                        href="/login"
                     >
                         Zaloguj się
+                    </a>
+                    <a class="btn text-body"
+                       href="/register"
+                    >
+                        Rejestruj
                     </a>
                 {% endif %}
             </div>
