--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -32,7 +32,7 @@
             <button class="btn btn-lg btn-secondary">
                 Zaloguj się
             </button>
-            <a href="" class="link mx-auto">Zapomniałeś hasła?</a>
+            <a href="" class="link text-body mx-auto">Zapomniałeś hasła?</a>
 
         </div>
 
