--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -9,32 +9,33 @@
 
 {% block main %}
     <div class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="car d-flex flex-column gap-3 p-5 border border-1 rounded shadow-sm">
-            <h1 class="text-center mb-5">Logowanie</h1>
-            <div class="form-floating">
-                <input id="username"
-                       type="text"
-                       name="username"
-                       placeholder=" "
-                       class="form-control form-control-lg"
-                >
-                <label for="username">Nazwa użytkownika</label>
-            </div>
-            <div class="form-floating">
-                <input id="password"
-                       type="password"
-                       name="password"
-                       placeholder=" "
-                       class="form-control form-control-lg"
-                >
-                <label for="password">Hasło</label>
-            </div>
-            <button class="btn btn-lg btn-secondary">
-                Zaloguj się
-            </button>
-            <a href="" class="link text-body mx-auto">Zapomniałeś hasła?</a>
+        <form action="/login" method="POST" >
+            <div class="car d-flex flex-column gap-3 p-5 border border-1 rounded shadow-sm">
+                <h1 class="text-center mb-5">Logowanie</h1>
+                <div class="form-floating">
+                    <input id="username"
+                           type="text"
+                           name="username"
+                           placeholder=" "
+                           class="form-control form-control-lg"
+                    >
+                    <label for="username">Nazwa użytkownika</label>
+                </div>
+                <div class="form-floating">
+                    <input id="password"
+                           type="password"
+                           name="password"
+                           placeholder=" "
+                           class="form-control form-control-lg"
+                    >
+                    <label for="password">Hasło</label>
+                </div>
+                <button class="btn btn-lg btn-secondary">
+                    Zaloguj się
+                </button>
+                <a href="" class="link text-body mx-auto">Zapomniałeś hasła?</a>
 
-        </div>
-
+            </div>
+        </form>
     </div>
 {% endblock main %}
