--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -2,35 +2,42 @@
     --sidebar-transition-speed: 300ms;
 }
 
-#sidebar {
+.main-sidebar {
+    position: absolute;
     width: 0;
     padding: 0;
     overflow: hidden;
     transition: width var(--sidebar-transition-speed);
+    z-index: 9999;
 }
 
-#main {
+.main-sidebar.active {
+    width: 400px;
+}
+
+.main-content {
     width: 100%;
     overflow: hidden;
     transition: width var(--sidebar-transition-speed);
 }
 
 @media screen and (min-width: 992px) {
-    #sidebar {
+    .main-sidebar {
+        position: static;
         width: 25%;
     }
 
-    #main {
+    .main-content {
         width: 75%;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    #sidebar {
+    .main-sidebar {
         width: 20%;
     }
 
-    #main {
+    .main-content {
         width: 80%;
     }
 }
