--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -5,10 +5,10 @@
     <div class="container-fluid">
         {#        TODO: Hide this button when user is not logged in #}
 
-        <button class="navbar-toggler d-lg-none"
+        <button
+                class="navbar-toggler d-lg-none"
+                id="sidebarBtn"
                 type="button"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasSidebar"
                 aria-controls="offcanvasExample"
         >
             <span class="navbar-toggler-icon"></span>
