--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -1,15 +1,14 @@
-<aside id="sidebar" class="vh-100 col-lg-3 col-xl-2 border-1 border-end border-dark-subtle" >
-    {% include "partials/sidebar-content.html.twig" %}
-</aside>
-
-<aside class="offcanvas offcanvas-start"
-       tabindex="-1"
-       id="offcanvasSidebar"
-       aria-labelledby="offcanvasExampleLabel"
->
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+<aside id="sidebar" class="vh-100 col-lg-3 col-xl-2 border-1 border-end border-dark-subtle main-sidebar bg-body-tertiary" >
+    <div>
+        <div class="form-check form-switch" >
+            <input
+                class="form-check-input"
+                type="checkbox"
+                role="switch"
+                id="themeSwitch"
+                style="cursor: pointer; width: 3rem; height: 1.5rem;"
+                aria-label="theme-switch"
+            >
+        </div>
     </div>
-    {% include "partials/sidebar-content.html.twig" %}
 </aside>
