--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
 {% include "partials/nav.html.twig" %}
 
 <section class="container-fluid">
-    <div class="row" style="min-height: calc(100vh - 56px);">
+    <div class="row" >
         {% block sidebar %}
             {% include "partials/sidebar.html.twig" %}
         {% endblock sidebar %}
