change validation message

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,14 +18,14 @@
             style="height: max-content"
         >
             <div
-                class="container d-flex flex-column justify-content-center align-items-center gap-3 w-25"
+                class="container d-flex flex-column justify-content-center align-items-center gap-3 "
                 style="height: calc(100vh - 56px);"
             >
-                <div class="input-group shadow-sm rounded-3">
+                <div class="input-group shadow-sm rounded-3 w-50">
                     <input
                         type="text"
                         name="clientCode"
-                        class="form-control form-control-lg "
+                        class="form-control form-control-lg"
                         placeholder="Wprowadź kod"
                         aria-label="customer-code"
                     >
