--- a/templates/client/service-details.html.twig
+++ b/templates/client/service-details.html.twig
@@ -1,31 +1,72 @@
 {% extends "base.html.twig" %}
 
-{% block sidebar %}
-{% endblock sidebar %}
+{% block title %}
+    Service Details
+{% endblock title %}
 
 {% block main %}
-    <div class="container-fluid d-flex justify-content-center align-items-center" >
-        <div class="w-50 h-50 accordion" id="carsAccordion">
+    <div
+        class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex flex-column gap-2 mt-5"
+        style="min-height: calc(100vh - 56px);">
+        <div class="">
+            <h2>Witaj, {{ client.Firstname }}!</h2>
+            <p class="mb-0">Twój kod klienta: <b>{{ clientCode }}</b></p>
+            <p class="mt-4 fs-5">Aktualnie w serwisie</p>
+        </div>
+        <div class="w-75 accordion" id="carsAccordion">
             {% for car in cars %}
-
                 <div class="accordion-item">
                     <h3 class="accordion-header">
                         <button
                             class="accordion-button collapsed"
                             type="button"
                             data-bs-toggle="collapse"
-                            data-bs-target="#{{ car.model }}"
+                            data-bs-target="#car-{{ car.Id }}"
                             aria-expanded="true"
-                            aria-controls="{{ car.model }}"
+                            aria-controls="#car-{{ car.Id }}"
                         >
-                            Accordion Item #1
+                            <span>
+                                <b>
+                                {{ car.Brand }} {{ car.Model }} {{ car.Type }}
+                                </b>
+                            </span>
                         </button>
                     </h3>
-                    <div id="{{ car.model }}"
+                    <div id="car-{{ car.Id }}"
                          class="accordion-collapse collapse"
                     >
                         <div class="accordion-body">
-                            {{ car.model }}
+                            <div>
+                                <p>Status realizacji: {{ car.Status }}</p>
+                                <p>Data przyjęcia: {{ car.AdmissionDate }}</p>
+                                <p>Data oddania: {{ car.SubmissionDate is null ? '----' : car.SubmissionDate }} </p>
+                            </div>
+                            {% if car.services is not empty %}
+                                <table class="table table-striped table-bordered table-hover mb-0">
+                                    <thead>
+                                    <tr>
+                                        <th>Lp.</th>
+                                        <th>Nazwa</th>
+                                        <th>Komentarz</th>
+                                        <th>Koszt</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% set i = 1 %}
+                                    {% for service in car.services %}
+                                        <tr>
+                                            <td>{{ i }}</td>
+                                            <td>{{ service.Name }}</td>
+                                            <td class="align-middle">{{ service.Comment is empty ? '<div style="height:2px;border-width:0;color:gray;background-color:gray;width:100%"></div>' : service.Comment }}</td>
+                                            <td>{{ service.Cost }}</td>
+                                        </tr>
+                                        {% set i = i + 1 %}
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% else %}
+                                Brak informacji
+                            {% endif %}
                         </div>
                     </div>
                 </div>
