--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -1,15 +1,8 @@
 <nav
-{#    class="navbar navbar-expand-lg px-lg-5 bg-dark-subtle text-white"#}
     class="navbar navbar-expand-lg px-lg-5 border-1 border-bottom border-dark-subtle"
 >
     <div class="container-fluid">
-        {#        TODO: Hide this button when user is not logged in #}
-
         <button
-{#                class="navbar-toggler d-lg-none"#}
-{#                id="sidebarBtn"#}
-{#                type="button"#}
-{#                aria-controls="offcanvasExample"#}
                 class="navbar-toggler px-3 text-white d-md-none"
                 type="button"
                 data-bs-toggle="offcanvas"
@@ -36,6 +29,7 @@
                            data-bs-toggle="dropdown"
                            aria-expanded="false"
                         >
+{#                            TODO: Maybe add first name and last name of the worker#}
                             {{ user.username }}
                         </a>
 
