--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -20,7 +20,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">
-                            Dodaj auto
+                            Dodaj samochód
                         </a>
                     </li>
                 {% else %}
