add worker profile, formatter, worker car list

--- a/templates/client/service-details.html.twig
+++ b/templates/client/service-details.html.twig
@@ -1,12 +1,12 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    Service Details
+    Szczegóły klienta
 {% endblock title %}
 
 {% block main %}
     <div
-        class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex flex-column gap-2 mt-5"
+        class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex flex-column gap-2 my-5"
         style="min-height: calc(100vh - 56px);">
         <div class="">
             <h2>Witaj, {{ client.Firstname }}!</h2>
