--- a/templates/errors/403.html.twig
+++ b/templates/errors/403.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    Page not found
+    Unauthorized
 {% endblock title %}
 
 {% block sidebar %}
@@ -9,8 +9,8 @@
 
 {% block main %}
     <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1>404</h1>
-        <div>Page not found</div>
+        <h1>403</h1>
+        <div>Unauthorized</div>
         <a href="#" onclick="goBack(); return false;">Go back</a>
     </div>
 
