--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -13,7 +13,10 @@
         >
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Logo</a>
+        <a class="navbar-brand" href="/">
+            <i class="fa-solid fa-screwdriver-wrench fs-2"></i>
+            <i class="fa-solid fa-car fs-2"></i>
+        </a>
         <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             </ul>
@@ -29,13 +32,11 @@
                            data-bs-toggle="dropdown"
                            aria-expanded="false"
                         >
-{#                            TODO: Maybe add first name and last name of the worker#}
                             {{ user.username }}
                         </a>
 
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Profil</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="/profile">Profil</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
