--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -6,21 +6,27 @@
                     data-bs-target="#sidebarMenu" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body d-flex flex-column justify-content-between" style="height: 80vh;">
-            <ul class="nav flex-column">
+            <ul class="nav flex-column mt-2">
+                {% set user = session.user %}
                 {% if session.user %}
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="/add-client" class="nav-link text-body {{ url starts with '/add-client' ? 'fw-bold' : '' }}">
                             Dodaj klienta
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="/add-car" class="nav-link text-body {{ url starts with '/add-car' ? 'fw-bold' : '' }}">
+                            Dodaj pojazd
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-body {{ url starts with '/add-worker' ? 'fw-bold' : '' }}">
                             Dodaj pracownika
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            Dodaj samochód
+                        <a href="/worker-cars" class="nav-link text-body {{ url starts with '/worker-cars' ? 'fw-bold' : '' }}">
+                            Wyświetl serwisowane pojazdy
                         </a>
                     </li>
                 {% else %}
